
Changelog
=========

1.4.1 (unreleased)
-----
- Provide better default template for result list entry
- Provide a macro for default directory information
- Fixes search viewlet being hidden on item view

1.4
---
- Map markers macro is now compatible with both brains and actual objects
- Requires Plone 4.3 to run

1.3
---
- Map markers are now always set in the order of the itemview's batch list.
- The directory no longer uses a homegrown getObject cache and will instead
  use catalog brains as much as possible. Directories building on
  seantis.dir.base might have taken that for granted, so they might be
  incompatible with this version.

  As a result, viewlets registered with the DirectoryItemViewletManager now
  need to expect catalog brains instead of objects.

  The upsides are big performance gains and more stability.

1.2
---

- onegov.ch approved: add badge to readme.
- Makes catalog adaptable for better customization
- Adds maps to items using collective.geo
- Refactors design. Base does no longer hold it's own type.
- Resolves name clash breaking absolute_url()
- Adds french translations

1.1
---

- Adds absolute url to xls export as a read only field

1.0.1
-----

- Makes fulltext search work independently of folder structure
- Fixes an IE7 bug resulting in shrinking input boxes

1.0
---

- Initial release