@@ -7,6 +7,8 @@ Changelog
 - Provide better default template for result list entry
 - Provide a macro for default directory information
 - Fixes search viewlet being hidden on item view
+- New flag allow_custom_categories on directory which can be used to prevent users
+from entering their own categories on items
 
 1.4
 ---
